<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="500dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descripcionLogo"
            app:srcCompat="@mipmap/logo_round" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/buttonDispositivos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonDispositivos"
            android:onClick="goToDispositivos"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonCarrera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCarrera"
            android:onClick="goToCarrera"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonPilotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonPilotos"
            android:onClick="goToPilotos" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonPistas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonPistas" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonHistorico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonHistorico" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonAutos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAutos" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>